--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "framer-motion": "^10.15.1",
     "nanoid": "^4.0.2",
     "next": "13.4.13",
     "postcss": "8.4.27",
